--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,11 @@
 name: Build macOS Executable
+
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+
 jobs:
   build:
     runs-on: macos-latest
@@ -16,14 +18,23 @@ jobs:
       with:
         python-version: '3.9'
     
-    - name: Install dependencies
+    - name: Install system dependencies
+      run: |
+        brew install tesseract
+        brew install poppler
+    
+    - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pdfplumber pyinstaller
+        pip install pdfplumber pytesseract pdf2image nltk Pillow pyinstaller
+    
+    - name: Download NLTK data
+      run: |
+        python -c "import nltk; nltk.download('punkt')"
     
     - name: Build executable
       run: |
-        pyinstaller --onefile pdftojson
+        pyinstaller --onefile --add-binary '/usr/local/bin/tesseract:.' --add-binary '/usr/local/lib/libtesseract.dylib:.' pdftojson
     
     - name: Upload artifact
       uses: actions/upload-artifact@v4
