--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,6 @@ name: Build macOS Executable
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 jobs:
   build:
@@ -21,11 +19,10 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pdfplumber pyinstaller
+        pip install -r requirements.txt pyinstaller
     
     - name: Build executable
-      run: |
-        pyinstaller --clean --onefile --name pdftojson pdftojson
+      run: pyinstaller --onefile pdftojson
     
     - name: Upload artifact
       uses: actions/upload-artifact@v4
